--- a/vue-mart/index.html
+++ b/vue-mart/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vue-mart</title>
+    <link rel="stylesheet" href="https://unpkg.com/cube-ui/lib/cube.min.css">
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="https://unpkg.com/cube-ui/lib/cube.min.js"></script>
 </html>
